deleted unused files and added several update through out

--- a/optimize_fbd_model.ipynb
+++ b/optimize_fbd_model.ipynb
@@ -216,7 +216,7 @@
     "\n",
     "study = None \n",
     "if config is not None: \n",
-    "    study = parallell_optimization(config, labels, fbd_args)"
+    "    study = parallell_optimization(config, labels, fbd_args, study_hash=None)"
    ]
   },
   {
