--- a/train_shadow_models.ipynb
+++ b/train_shadow_models.ipynb
@@ -54,24 +54,6 @@
    "outputs": [],
    "source": [
     "# ------------------- #\n",
-    "#   Load Audit yaml   #\n",
-    "# ------------------- #\n",
-    "config = None\n",
-    "with open(\"./audit.yaml\") as file:\n",
-    "    audit_config = yaml.safe_load(file)\n",
-    "\n",
-    "print(\"-------------- Audit config --------------\")\n",
-    "print_yaml(audit_config['audit'])\n",
-    "print_yaml(audit_config['target'])\n",
-    "\n",
-    "# Update the audit config\n",
-    "audit_config['target']['target_folder'] = target_path\n",
-    "\n",
-    "print(\"\\n-------------- Updated audit config --------------\")\n",
-    "print_yaml(audit_config['audit'])\n",
-    "print_yaml(audit_config['target'])\n",
-    "\n",
-    "# ------------------- #\n",
     "#   Load Train yaml   #\n",
     "# ------------------- #\n",
     "config = None\n",
@@ -88,6 +70,7 @@
     "train_config['train']['momentum'] = metadata['train']['momentum']\n",
     "train_config['train']['t_max'] = metadata['train']['t_max']\n",
     "train_config['train']['drop_rate'] = metadata['train']['drop_rate']\n",
+    "train_config['train']['model'] = metadata['train']['model']\n",
     "\n",
     "print(\"\\n-------------- Updated train config --------------\")\n",
     "print_yaml(train_config)"
@@ -133,7 +116,7 @@
     "#   Train the Shadow models   #\n",
     "# --------------------------- #\n",
     "gpu_ids = [0, 1, 2, 3, 4, 5, 6]\n",
-    "results = create_shadow_models_parallel(train_config, audit_config, gpu_ids, full_dataset, target_folder)"
+    "results = create_shadow_models_parallel(train_config, 256, gpu_ids, full_dataset, target_folder)"
    ]
   },
   {
