--- a/visualize_baseline_study.ipynb
+++ b/visualize_baseline_study.ipynb
@@ -7,21 +7,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from optuna.visualization import plot_contour\n",
-    "from optuna.visualization import plot_edf\n",
-    "from optuna.visualization import plot_intermediate_values\n",
-    "from optuna.visualization import plot_optimization_history\n",
-    "from optuna.visualization import plot_parallel_coordinate\n",
-    "from optuna.visualization import plot_param_importances\n",
-    "from optuna.visualization import plot_rank\n",
-    "from optuna.visualization import plot_slice\n",
-    "from optuna.visualization import plot_timeline\n",
     "from sklearn.neighbors import NearestNeighbors\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "from LeakPro.leakpro.attacks.mia_attacks.lira import lira_vectorized\n",
-    "from LeakPro.leakpro.attacks.mia_attacks.rmia import rmia_vectorised\n",
+    "from LeakPro.leakpro.attacks.mia_attacks.rmia import rmia_vectorised, rmia_get_gtlprobs\n",
     "\n",
     "import plotly.io as pio\n",
     "import os\n",
@@ -31,8 +22,8 @@
     "from optuna.storages import JournalStorage\n",
     "from optuna.storages.journal import JournalFileBackend\n",
     "\n",
-    "from src.save_load import loadTargetSignals, loadShadowModelSignals\n",
-    "from src.utils import calculate_roc"
+    "from src.save_load import loadTargetSignals, loadShadowModelSignals, loadFbdStudy, savePlot\n",
+    "from src.utils import calculate_roc, rescale_logits"
    ]
   },
   {
@@ -45,8 +36,8 @@
     "# ------------------------- #\n",
     "#    Load Target Signals    #\n",
     "# ------------------------- #\n",
-    "target_name = \"wideresnet-d971f7dcdc\"\n",
-    "logits, in_mask, resc_logits, gtl_probs, metadata, metadata_pkl = loadTargetSignals(target_name)\n",
+    "target_folder = \"wideresnet-d971f7dcdc\"\n",
+    "logits, in_mask, resc_logits, gtl_probs, metadata, metadata_pkl = loadTargetSignals(target_folder)\n",
     "print(f\"resc_logits first 10: {resc_logits[:10]}, in_mask first 10: {in_mask[:10]}\")\n",
     "print(f\"resc_logits shape: {resc_logits.shape}, in_mask shape: {in_mask.shape}\")\n",
     "# Maybe visualize accuracy with a plot or something"
@@ -65,17 +56,17 @@
     "what_to_load = {\n",
     "    \"logits\": False,\n",
     "    \"resc_logits\": True,\n",
-    "    \"gtp_probs\": False,\n",
+    "    \"gtp_probs\": True,\n",
     "    \"in_mask\": True,\n",
     "    \"metadata_pkl\": False\n",
     "}\n",
-    "sm_logits, sm_resc_logits, sm_gtl_probs, sm_in_mask, sm_metadata_pkl = loadShadowModelSignals(target_name, what_to_load)"
+    "sm_logits, sm_resc_logits, sm_gtl_probs, sm_in_mask, sm_metadata_pkl, missing_indices = loadShadowModelSignals(target_folder, what_to_load)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e76582fb",
+   "id": "ddd7d197",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +74,9 @@
     "#    Calc and Plot ROC    #\n",
     "# ----------------------- #\n",
     "lira_scores = lira_vectorized(resc_logits, sm_resc_logits, sm_in_mask, \"carlini\", online=True)\n",
+    "rmia_scores = rmia_vectorised(gtl_probs, sm_gtl_probs, sm_in_mask, online=True, use_gpu_if_available=True)\n",
     "lira_tpr, lira_fpr = calculate_roc(lira_scores, in_mask, clip=True)\n",
+    "rmia_tpr, rmia_fpr = calculate_roc(rmia_scores, in_mask, clip=True)\n",
     "print(f\"lira_scores first 10: {lira_scores[:10]}\")\n",
     "print(f\"lira_scores shape: {lira_scores.shape}\")\n",
     "baseline_accuracy = metadata_pkl.test_result.accuracy\n",
@@ -94,7 +87,8 @@
     "random_tpr = random_fpr.copy()         # TPR = FPR\n",
     "\n",
     "ax.plot(random_fpr, random_tpr, \"--\", color=\"red\", alpha=0.7, label=\"Random Guessing\")\n",
-    "ax.plot(lira_fpr, lira_tpr, color=\"cornflowerblue\", label=f\"Baseline: accuracy={baseline_accuracy:.2f}\")\n",
+    "ax.plot(lira_fpr, lira_tpr, color=\"cornflowerblue\", label=f\"LiRA\")\n",
+    "ax.plot(rmia_fpr, rmia_tpr, color=\"orange\", label=f\"RMIA\")\n",
     "\n",
     "ax.set_xscale(\"log\")\n",
     "ax.set_yscale(\"log\")\n",
@@ -103,8 +97,9 @@
     "ax.set_xlabel(\"FPR\")\n",
     "ax.set_ylabel(\"TPR\")\n",
     "ax.grid(True, alpha=0.3)\n",
-    "ax.set_title(\"LiRA\")\n",
-    "ax.legend(loc=\"lower right\")"
+    "ax.set_title(\"Baseline ROC\")\n",
+    "ax.legend(loc=\"lower right\")\n",
+    "savePlot(fig, \"ROC_baseline\", target_folder, \"target\")"
    ]
   },
   {
@@ -137,172 +132,6 @@
     "print(\"Params:\")\n",
     "for key, value in best_trial.params.items():\n",
     "    print(f\"  {key}: {value}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b7eb1468",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# -----------------------------------#\n",
-    "#    Visualize Journal With Plots    #\n",
-    "# -----------------------------------#\n",
-    "pio.renderers.default = 'iframe_connected'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "68a13f59",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_optimization_history(study).show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f4bede49",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_intermediate_values(study).show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cfb0f73e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_parallel_coordinate(study).show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "47c3d4f4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_contour(study).show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2c46663d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_slice(study).show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ce823d8a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_param_importances(study).show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b4fae983",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_edf(study).show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "38987e96",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_rank(study).show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "87edd30b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_timeline(study).show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8d98e60b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# ----------------------------------------#\n",
-    "#    Visualize Journal With Dataframes    #\n",
-    "# ----------------------------------------#\n",
-    "# ----------------------------\n",
-    "# Extract completed trials only\n",
-    "# ----------------------------\n",
-    "df = study.trials_dataframe(attrs=(\"params\", \"value\", \"state\"))\n",
-    "df = df[df[\"state\"] == \"COMPLETE\"].dropna(subset=[\"value\"])\n",
-    "\n",
-    "X_raw = df.filter(like=\"params_\")\n",
-    "y = df[\"value\"].values\n",
-    "\n",
-    "if X_raw.empty:\n",
-    "    raise ValueError(\"No completed trials found for GP fitting.\")\n",
-    "\n",
-    "# ----------------------------\n",
-    "# Apply log10 scaling to selected parameters\n",
-    "# ----------------------------\n",
-    "X_log_scaled = X_raw.copy()\n",
-    "for col in X_log_scaled.columns:\n",
-    "    if col.endswith(\"lr\") or col.endswith(\"weight_decay\"):\n",
-    "        X_log_scaled[col] = np.log10(X_log_scaled[col])\n",
-    "\n",
-    "# ----------------------------\n",
-    "# Normalize hyperparameters\n",
-    "# ----------------------------\n",
-    "scaler = MinMaxScaler()\n",
-    "X = scaler.fit_transform(X_log_scaled)\n",
-    "\n",
-    "# ----------------------------\n",
-    "# Fit Gaussian Process\n",
-    "# ----------------------------\n",
-    "kernel = C(1.0, (1e-3, 1e3)) * RBF(length_scale=1.0)\n",
-    "gp = GaussianProcessRegressor(kernel=kernel, alpha=1e-6, normalize_y=True)\n",
-    "gp.fit(X, y)\n",
-    "\n",
-    "# ----------------------------\n",
-    "# Predict mean and std for each completed trial\n",
-    "# ----------------------------\n",
-    "y_mean, y_std = gp.predict(X, return_std=True)\n",
-    "\n",
-    "# ----------------------------\n",
-    "# Create output DataFrame\n",
-    "# ----------------------------\n",
-    "output_df = X_raw.copy()\n",
-    "output_df[\"gp_mean\"] = y_mean\n",
-    "output_df[\"gp_std\"] = y_std\n",
-    "output_df[\"observed_accuracy\"] = y\n",
-    "\n",
-    "# Sort by predicted mean accuracy\n",
-    "output_df_sorted = output_df.sort_values(by=\"gp_mean\", ascending=False)\n",
-    "\n",
-    "# Show top 5\n",
-    "output_df_sorted.head(5)"
    ]
   }
  ],
