--- a/optimize_target_model.ipynb
+++ b/optimize_target_model.ipynb
@@ -68,7 +68,9 @@
     "\n",
     "# Assign the datasets\n",
     "sh.train_dataset = train_dataset\n",
-    "sh.test_dataset = test_dataset"
+    "sh.test_dataset = test_dataset\n",
+    "print(f\"train_dataset shape: {sh.train_dataset.shape}\")\n",
+    "print(f\"test_dataset shape: {sh.test_dataset.shape}\")"
    ]
   },
   {
