fixed small bugs

--- a/optimize_target_model.ipynb
+++ b/optimize_target_model.ipynb
@@ -69,8 +69,8 @@
     "# Assign the datasets\n",
     "sh.train_dataset = train_dataset\n",
     "sh.test_dataset = test_dataset\n",
-    "print(f\"train_dataset shape: {sh.train_dataset.shape}\")\n",
-    "print(f\"test_dataset shape: {sh.test_dataset.shape}\")"
+    "print(f\"train_dataset data shape: {sh.train_dataset.dataset.data.shape}\")\n",
+    "print(f\"train_dataset targets shape: {sh.train_dataset.dataset.targets.shape}\")"
    ]
   },
   {
@@ -105,7 +105,7 @@
     "\n",
     "    processes = []\n",
     "    for gpu_id, trials in zip(gpu_ids, trials_per_gpu):\n",
-    "        print(\"Running {trials} on gpu: {gpu_id}\")\n",
+    "        print(f\"Running {trials} on gpu: {gpu_id}\")\n",
     "        p = multiprocessing.Process(\n",
     "            target=run_baseline_optimization,\n",
     "            args=(config, gpu_id, trials, save_path, hash_id)\n",
