added mlp3 baseline training

--- a/train_baseline_target_model.ipynb
+++ b/train_baseline_target_model.ipynb
@@ -105,14 +105,15 @@
     "train_cfg[\"t_max\"] = best_trial.params.get(\"T_max\", None)  # fallback default\n",
     "train_cfg[\"model\"] = study_metadata[\"study\"][\"model\"]   # Model architecture from metadata\n",
     "train_cfg[\"drop_rate\"] = best_trial.params.get(\"drop_rate\", None)  # fallback default\n",
+    "train_cfg[\"optimizer\"] = best_trial.params.get(\"optimizer\", \"SGD\")\n",
     "\n",
-    "print(f\"Modified train_cfg with optimal hyperparameters: {train_cfg}\")\n",
+    "print(\"Modified train_cfg with optimal hyperparameters\")\n",
     "\n",
     "config[\"train\"] = train_cfg\n",
     "\n",
-    "# ------------------------------ #\n",
-    "#  Save the updated config file  #\n",
-    "# ------------------------------ #\n",
+    "# ------------------- #\n",
+    "#  Save the metadata  #\n",
+    "# ------------------- #\n",
     "train_metadata = buildTargetMetadata(train_cfg, data_cfg)\n",
     "hash_id, save_dir = saveTarget(train_metadata)\n",
     "print(f\"Saved training metadata with {hash_id} at {save_dir}\")\n",
