updated shadow model training to handle tabular data and mlp models

--- a/train_baseline_target_model.ipynb
+++ b/train_baseline_target_model.ipynb
@@ -19,9 +19,11 @@
     "from src.train_models import trainTargetModel, trainFbDTargetModel\n",
     "from src.visualize_model import VisualizeModel\n",
     "from src.utils import print_yaml, calculate_logits_and_inmask, rescale_logits\n",
+    "from src.models.mlp_model import MLP3, MLP4\n",
     "from src.models.resnet18_model import ResNet18\n",
     "from src.models.wideresnet28_model import WideResNet\n",
     "from src.cifar_handler import CifarInputHandler\n",
+    "from src.tabular_handler import TabularInputHandler\n",
     "from src.dataset_handler import processDataset, loadDataset, get_dataloaders\n",
     "\n",
     "from LeakPro.leakpro.attacks.mia_attacks.rmia import rmia_get_gtlprobs\n",
@@ -100,7 +102,7 @@
     "# Overwrite study-optimized params\n",
     "train_cfg[\"batch_size\"] = best_trial.params[\"batch_size\"]\n",
     "train_cfg[\"learning_rate\"] = best_trial.params[\"lr\"]\n",
-    "train_cfg[\"momentum\"] = best_trial.params[\"momentum\"]\n",
+    "train_cfg[\"momentum\"] = best_trial.params.get(\"momentum\", None)\n",
     "train_cfg[\"weight_decay\"] = best_trial.params[\"weight_decay\"]\n",
     "train_cfg[\"t_max\"] = best_trial.params.get(\"T_max\", None)  # fallback default\n",
     "train_cfg[\"model\"] = study_metadata[\"study\"][\"model\"]   # Model architecture from metadata\n",
@@ -172,7 +174,7 @@
     "reload_target = True\n",
     "if reload_target:\n",
     "\n",
-    "    target = \"resnet-cinic10-c51d329813\"\n",
+    "    target = \"mlp3-purchase100-56650b4a87\"\n",
     "    target_path = os.path.join(\"target\", target)\n",
     "\n",
     "    metadata_path = os.path.join(target_path, \"metadata.json\")\n",
@@ -184,16 +186,24 @@
     "    target_model_pkl_path = os.path.join(target_path, \"target_model.pkl\")\n",
     "    \n",
     "    state_dict = torch.load(target_model_pkl_path, map_location=\"cpu\")\n",
-    "    if metadata[\"data\"][\"dataset\"] == \"cifar10\" or metadata[\"data\"][\"dataset\"] == \"cinic10\":\n",
+    "\n",
+    "    ds_name = metadata[\"data\"][\"dataset\"]\n",
+    "    if ds_name == \"cifar10\" or ds_name == \"cinic10\":\n",
     "        num_classes = 10 # or 100 in case of cifar 100\n",
-    "    else:\n",
+    "    elif ds_name == \"cifar100\" or ds_name == \"purchase100\":\n",
     "        num_classes = 100\n",
-    "        \n",
-    "    if metadata[\"train\"][\"model\"] == \"resnet\":\n",
+    "        input_dim = 600\n",
+    "\n",
+    "    m_name = metadata[\"train\"][\"model\"]\n",
+    "    if m_name == \"resnet\":\n",
     "        model = ResNet18(num_classes=num_classes)\n",
-    "    elif metadata[\"train\"][\"model\"] == \"wideresnet\":\n",
+    "    elif m_name == \"wideresnet\":\n",
     "        model = WideResNet(depth=28, num_classes=num_classes, widen_factor=10)\n",
-    "   \n",
+    "    elif m_name == \"mlp3\":\n",
+    "        model = MLP3(input_dim=input_dim, num_classes=num_classes)\n",
+    "    elif m_name == \"mlp4\":\n",
+    "        model = MLP3(input_dim=input_dim, num_classes=num_classes)\n",
+    "    \n",
     "    model.load_state_dict(state_dict)\n",
     "    model.eval()\n",
     "    device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
@@ -218,9 +228,13 @@
     "        dataset = pickle.load(f)\n",
     "    \n",
     "    # Wrap the full dataset in UserDataset if needed\n",
-    "    if not isinstance(dataset, CifarInputHandler.UserDataset):\n",
-    "        data_tensor, target_tensor = dataset\n",
-    "        dataset = CifarInputHandler.UserDataset(data_tensor, target_tensor)\n",
+    "    if not isinstance(dataset, CifarInputHandler.UserDataset) or not isinstance(dataset, TabularInputHandler.TabularUserDataset):\n",
+    "        data_tensor = dataset.data\n",
+    "        target_tensor = dataset.targets\n",
+    "        if ds_name in [\"cifar10\", \"cifar100\", \"cinic10\"]:\n",
+    "            dataset = CifarInputHandler.UserDataset(data_tensor, target_tensor)\n",
+    "        #elif ds_name in [\"purchase100\", \"texas100\", \"location\"]:\n",
+    "        #    dataset = TabularInputHandler.TabularUserDataset(data_tensor, target_tensor)\n",
     "        \n",
     "    labels = dataset.targets\n",
     "    \n",
