--- a/visualize_baseline_study.ipynb
+++ b/visualize_baseline_study.ipynb
@@ -56,7 +56,7 @@
     "what_to_load = {\n",
     "    \"logits\": False,\n",
     "    \"resc_logits\": True,\n",
-    "    \"gtp_probs\": True,\n",
+    "    \"gtl_probs\": True,\n",
     "    \"in_mask\": True,\n",
     "    \"metadata_pkl\": False\n",
     "}\n",
