Added support for tabular fbd study

--- a/train_baseline_target_model.ipynb
+++ b/train_baseline_target_model.ipynb
@@ -156,7 +156,8 @@
     "# ------------------------------- #\n",
     "train_result, test_result = trainTargetModel(config, train_loader, test_loader, train_indices, test_indices, save_dir)\n",
     "if(train_result != None and test_result != None):\n",
-    "    VisualizeModel().visualize(train_result, test_result)"
+    "    VisualizeModel().visualize(train_result, test_result)\n",
+    "print(f\"Test accuracy: {test_result.accuracy}\")"
    ]
   },
   {
