--- a/train_shadow_models.ipynb
+++ b/train_shadow_models.ipynb
@@ -71,6 +71,7 @@
     "train_config['train']['t_max'] = metadata['train']['t_max']\n",
     "train_config['train']['drop_rate'] = metadata['train']['drop_rate']\n",
     "train_config['train']['model'] = metadata['train']['model']\n",
+    "train_config['train']['optimizer'] = metadata['train']['optimizer']\n",
     "\n",
     "print(\"\\n-------------- Updated train config --------------\")\n",
     "print_yaml(train_config)"
