updated notebooks to support tabular

--- a/optimize_fbd_model.ipynb
+++ b/optimize_fbd_model.ipynb
@@ -75,7 +75,7 @@
     "    \"metadata_pkl\": False\n",
     "}\n",
     "# The missing indices variable will contain a list of all indices not found up to the set amount of shadow models\n",
-    "sm_logits, sm_resc_logits, shadow_gtl_probs, sm_inmask, sm_metadata_pkl, missing_indices = loadShadowModelSignals(target_folder, what_to_load)"
+    "shadow_logits, sm_resc_logits, shadow_gtl_probs, shadow_inmask, sm_metadata_pkl, missing_indices = loadShadowModelSignals(target_folder, what_to_load)"
    ]
   },
   {
@@ -99,7 +99,7 @@
     "config['fbd_study'][\"t_max\"] = train_metadata[\"t_max\"]\n",
     "config['fbd_study'][\"weight_decay\"] = train_metadata[\"weight_decay\"]\n",
     "config['fbd_study'][\"model\"] = train_metadata[\"model\"]\n",
-    "if train_metadata[\"model\"] == \"wideresnet\": \n",
+    "if train_metadata[\"model\"] in [\"wideresnet\", \"mlp3\", \"mlp4\"]: \n",
     "    config['fbd_study'][\"drop_rate\"] = train_metadata[\"drop_rate\"] \n",
     "\n",
     "print_yaml(\"\\n------------ Updated study config: ------------\")\n",
@@ -120,11 +120,8 @@
     "if sel_sm:\n",
     "    sm_count = config['fbd_study']['shadow_model_count']\n",
     "    print(f\"Randomly selecting {sm_count} to be used for the study.\")\n",
-    "    shadow_logits, shadow_inmask = get_shadow_signals(sm_logits, sm_inmask, sm_count)\n",
-    "    print(f\"Shape of selected_sm_logits: {shadow_logits.shape}\")\n",
-    "else:\n",
-    "    shadow_logits = sm_logits\n",
-    "    shadow_inmask = sm_inmask"
+    "    shadow_logits, shadow_inmask = get_shadow_signals(shadow_logits, shadow_inmask, sm_count)\n",
+    "    print(f\"Shape of selected_sm_logits: {shadow_logits.shape}\")"
    ]
   },
   {
@@ -137,7 +134,6 @@
     "#-------------------#\n",
     "#  Prepare dataset  #\n",
     "#-------------------#\n",
-    "\n",
     "data_cfg = config['data']\n",
     "trainset, testset, full_dataset = loadDataset(data_cfg)\n",
     "\n",
