--- a/train_baseline_target_model.ipynb
+++ b/train_baseline_target_model.ipynb
@@ -203,7 +203,8 @@
     "    elif m_name == \"mlp3\":\n",
     "        model = MLP3(input_dim=input_dim, num_classes=num_classes)\n",
     "    elif m_name == \"mlp4\":\n",
-    "        model = MLP3(input_dim=input_dim, num_classes=num_classes)\n",
+    "        dropout = metadata[\"train\"][\"drop_rate\"]\n",
+    "        model = MLP4(input_dim=input_dim, num_classes=num_classes)\n",
     "    \n",
     "    model.load_state_dict(state_dict)\n",
     "    model.eval()\n",
