missed updating optimizer

--- a/optimize_fbd_model.ipynb
+++ b/optimize_fbd_model.ipynb
@@ -99,6 +99,7 @@
     "config['fbd_study'][\"t_max\"] = train_metadata[\"t_max\"]\n",
     "config['fbd_study'][\"weight_decay\"] = train_metadata[\"weight_decay\"]\n",
     "config['fbd_study'][\"model\"] = train_metadata[\"model\"]\n",
+    "config['fbd_study'][\"optimizer\"] = train_metadata[\"optimizer\"]\n",
     "if train_metadata[\"model\"] in [\"wideresnet\", \"mlp3\", \"mlp4\"]: \n",
     "    config['fbd_study'][\"drop_rate\"] = train_metadata[\"drop_rate\"] \n",
     "\n",
