updated visualization, streamlined target and shadowmodel training

--- a/visualize_fbd_study.ipynb
+++ b/visualize_fbd_study.ipynb
@@ -280,7 +280,8 @@
     "baseline_tpr_curve_lira, baseline_fpr_curve_lira = calculate_roc(lira_scores, baseline_inmask, clip=True)\n",
     "baseline_tpr_curve_rmia, baseline_fpr_curve_rmia = calculate_roc(rmia_scores, baseline_inmask, clip=True)\n",
     "\n",
-    "w_model_acc_threshold = [0.75, 0.70, 0.65]\n",
+    "# Thresholds will be base accuracy -5% in steps\n",
+    "w_model_acc_threshold = [baseline_accuracy-0.05, baseline_accuracy-0.10, baseline_accuracy-0.15]\n",
     "\n",
     "# Find indices that lie within a +2 range of a threshold index. Return the indices for each threshold.\n",
     "# For each index list compare all tau\n",
@@ -337,7 +338,7 @@
     "ax.plot(random_fpr, random_tpr, \"--\", color=\"red\", alpha=0.7, label=\"Random Guessing\")\n",
     "ax.plot(baseline_fpr_curve_lira, baseline_tpr_curve_lira, color=\"cornflowerblue\", label=f\"Baseline: accuracy={baseline_accuracy:.2f}\")\n",
     "for tpr, fpr, color, acc, noise, cent, temp in zip(w_lira_tpr_curves, w_lira_fpr_curves, colors, w_acc, w_noise, w_cent, w_temp):\n",
-    "    ax.plot(fpr, tpr, color=color, label=f\"FbD: accuracy={acc:.2f}, σ={noise:.2f}, centrality={cent:.2f} ,temperature={temp:.2f}\")\n",
+    "    ax.plot(fpr, tpr, color=color, label=f\"FbD: accuracy={acc:.2f}, σ={noise:.2f}, c={cent:.2f} ,t={temp:.2f}\")\n",
     "ax.set_xscale(\"log\")\n",
     "ax.set_yscale(\"log\")\n",
     "ax.set_xlim(1e-5, 1)\n",
@@ -345,8 +346,8 @@
     "ax.set_xlabel(\"FPR\")\n",
     "ax.set_ylabel(\"TPR\")\n",
     "ax.grid(True, alpha=0.3)\n",
-    "ax.set_title(\"LiRA\")\n",
-    "ax.legend()    \n",
+    "ax.set_title(\"LiRA ROC Curves: Baseline vs. FbD Models at Target Accuracy Thresholds\")\n",
+    "ax.legend(loc=\"lower right\")\n",
     "\n",
     "# ------- RMIA ROC ------- #\n",
     "ax = axes[1]\n",
@@ -355,7 +356,7 @@
     "ax.plot(random_fpr, random_tpr, \"--\", color=\"red\", alpha=0.7, label=\"Random Guessing\")\n",
     "ax.plot(baseline_fpr_curve_rmia, baseline_tpr_curve_rmia, color=\"cornflowerblue\", label=f\"Baseline: accuracy={baseline_accuracy:.2f}\")\n",
     "for tpr, fpr, color, acc, noise, cent, temp in zip(w_rmia_tpr_curves, w_rmia_fpr_curves, colors, w_acc, w_noise, w_cent, w_temp):\n",
-    "    ax.plot(fpr, tpr, color=color, label=f\"FbD: accuracy={acc:.2f}, σ={noise:.2f}, centrality={cent:.2f} ,temperature={temp:.2f}\")\n",
+    "    ax.plot(fpr, tpr, color=color, label=f\"FbD: accuracy={acc:.2f}, σ={noise:.2f}, c={cent:.2f} ,t={temp:.2f}\")\n",
     "ax.set_xscale(\"log\")\n",
     "ax.set_yscale(\"log\")\n",
     "ax.set_xlim(1e-5, 1)\n",
@@ -363,8 +364,8 @@
     "ax.set_xlabel(\"FPR\")\n",
     "ax.set_ylabel(\"TPR\")\n",
     "ax.grid(True, alpha=0.3)\n",
-    "ax.set_title(\"RMIA\")\n",
-    "ax.legend()\n",
+    "ax.set_title(\"RMIA ROC Curves: Baseline vs. FbD Models at Target Accuracy Thresholds\")\n",
+    "ax.legend(loc=\"lower right\")\n",
     "\n",
     "plt.tight_layout()\n",
     "plt.show()\n",
@@ -382,7 +383,6 @@
     "# ----------------------- #\n",
     "#  STD Variability Bands  #\n",
     "# ----------------------- #\n",
-    "\n",
     "fig, axes = plt.subplots(2, 2, figsize=(12, 5))\n",
     "\n",
     "# --- Top-left: your study tau (FbD) --- #\n",
@@ -487,9 +487,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ----------------------- #\n",
-    "#  Grouped Visualization  #\n",
-    "# ----------------------- #\n",
+    "# ---------------------------------- #\n",
+    "#  Collect Groups & Calculate Pareto #\n",
+    "# ---------------------------------- #\n",
+    "grp_fpr = \"0.01\"    # Controls which group should be used\n",
+    "\n",
     "df = pd.DataFrame({\n",
     "    \"accuracy\": accuracies,\n",
     "\n",
@@ -512,77 +514,66 @@
     "})\n",
     "print(\"========== df.head ==========\")\n",
     "df.head()\n",
+    "if grp_fpr == \"0.001\":\n",
+    "    group = (\n",
+    "        df.groupby([\"noise\", \"centrality\", \"temperature\"])\n",
+    "        .agg(\n",
+    "            accuracy_mean=(\"accuracy\", \"mean\"),\n",
+    "            accuracy_std=(\"accuracy\", \"std\"),\n",
     "\n",
-    "group_001 = (\n",
-    "    df.groupby([\"noise\", \"centrality\", \"temperature\"])\n",
-    "    .agg(\n",
-    "        accuracy_mean=(\"accuracy\", \"mean\"),\n",
-    "        accuracy_std=(\"accuracy\", \"std\"),\n",
+    "            rmia_mean=(\"tau_0.001_rmia\", \"mean\"),\n",
+    "            rmia_std=(\"tau_0.001_rmia\", \"std\"),\n",
     "\n",
-    "        rmia_mean=(\"tau_0.01_rmia\", \"mean\"),\n",
-    "        rmia_std=(\"tau_0.01_rmia\", \"std\"),\n",
-    "\n",
-    "        lira_mean=(\"tau_0.01_lira\", \"mean\"),\n",
-    "        lira_std=(\"tau_0.01_lira\", \"std\"),\n",
-    "        \n",
-    "        n=(\"study\", \"size\")\n",
+    "            lira_mean=(\"tau_0.001_lira\", \"mean\"),\n",
+    "            lira_std=(\"tau_0.001_lira\", \"std\"),\n",
+    "            \n",
+    "            n=(\"study\", \"size\")\n",
+    "        )\n",
+    "        .reset_index()\n",
     "    )\n",
-    "    .reset_index()\n",
-    ")\n",
+    "elif grp_fpr == \"0.01\":\n",
+    "    group = (\n",
+    "        df.groupby([\"noise\", \"centrality\", \"temperature\"])\n",
+    "        .agg(\n",
+    "            accuracy_mean=(\"accuracy\", \"mean\"),\n",
+    "            accuracy_std=(\"accuracy\", \"std\"),\n",
     "\n",
-    "group_01 = (\n",
-    "    df.groupby([\"noise\", \"centrality\", \"temperature\"])\n",
-    "    .agg(\n",
-    "        accuracy_mean=(\"accuracy\", \"mean\"),\n",
-    "        accuracy_std=(\"accuracy\", \"std\"),\n",
+    "            rmia_mean=(\"tau_0.01_rmia\", \"mean\"),\n",
+    "            rmia_std=(\"tau_0.01_rmia\", \"std\"),\n",
     "\n",
-    "        rmia_mean=(\"tau_0.01_rmia\", \"mean\"),\n",
-    "        rmia_std=(\"tau_0.01_rmia\", \"std\"),\n",
-    "\n",
-    "        lira_mean=(\"tau_0.01_lira\", \"mean\"),\n",
-    "        lira_std=(\"tau_0.01_lira\", \"std\"),\n",
-    "        \n",
-    "        n=(\"study\", \"size\")\n",
+    "            lira_mean=(\"tau_0.01_lira\", \"mean\"),\n",
+    "            lira_std=(\"tau_0.01_lira\", \"std\"),\n",
+    "            \n",
+    "            n=(\"study\", \"size\")\n",
+    "        )\n",
+    "        .reset_index()\n",
     "    )\n",
-    "    .reset_index()\n",
-    ")\n",
+    "elif grp_fpr == \"0.1\":\n",
+    "    group = (\n",
+    "        df.groupby([\"noise\", \"centrality\", \"temperature\"])\n",
+    "        .agg(\n",
+    "            accuracy_mean=(\"accuracy\", \"mean\"),\n",
+    "            accuracy_std=(\"accuracy\", \"std\"),\n",
     "\n",
-    "group_1 = (\n",
-    "    df.groupby([\"noise\", \"centrality\", \"temperature\"])\n",
-    "    .agg(\n",
-    "        accuracy_mean=(\"accuracy\", \"mean\"),\n",
-    "        accuracy_std=(\"accuracy\", \"std\"),\n",
+    "            rmia_mean=(\"tau_0.1_rmia\", \"mean\"),\n",
+    "            rmia_std=(\"tau_0.1_rmia\", \"std\"),\n",
     "\n",
-    "        rmia_mean=(\"tau_0.1_rmia\", \"mean\"),\n",
-    "        rmia_std=(\"tau_0.1_rmia\", \"std\"),\n",
-    "\n",
-    "        lira_mean=(\"tau_0.1_lira\", \"mean\"),\n",
-    "        lira_std=(\"tau_0.1_lira\", \"std\"),\n",
-    "        \n",
-    "        n=(\"study\", \"size\")\n",
+    "            lira_mean=(\"tau_0.1_lira\", \"mean\"),\n",
+    "            lira_std=(\"tau_0.1_lira\", \"std\"),\n",
+    "            \n",
+    "            n=(\"study\", \"size\")\n",
+    "        )\n",
+    "        .reset_index()\n",
     "    )\n",
-    "    .reset_index()\n",
-    ")\n",
+    "else:\n",
+    "    print(f\"Invalid fpr: {grp_fpr}\")\n",
     "print(\"========== Group ==========\")\n",
-    "# Select which group to visualize\n",
-    "group = group_01\n",
-    "group"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "667bc079",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "group\n",
+    "\n",
     "tmp = group[group[\"n\"]>=3]\n",
-    "\n",
     "xy_groups = []\n",
-    "\n",
     "xy_lira = tmp[[\"lira_mean\", \"accuracy_mean\"]].to_numpy()\n",
     "xy_groups.append(xy_lira)\n",
-    "\n",
     "xy_rmia = tmp[[\"rmia_mean\", \"accuracy_mean\"]].to_numpy()\n",
     "xy_groups.append(xy_rmia)\n",
     "\n",
@@ -604,7 +595,9 @@
     "    elif attack == \"rmia\":\n",
     "        tst = tmp.loc[frontier_mask].sort_values(\"rmia_mean\")\n",
     "        \n",
-    "    tst_list.append(tst)"
+    "    tst_list.append(tst)\n",
+    "    \n",
+    "print(tmp.shape, group.shape)"
    ]
   },
   {
@@ -614,17 +607,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(tmp.shape, group.shape)\n",
-    "\n",
-    "plt.plot(tmp[\"rmia_mean\"],tmp[\"accuracy_mean\"],'.',label=\"rmia scatter\")\n",
-    "plt.plot(tmp[\"lira_mean\"],tmp[\"accuracy_mean\"],'.',label=\"lira scatter\")\n",
-    "plt.plot(tst_list[0][\"lira_mean\"],tst_list[0][\"accuracy_mean\"],label=\"lira pareto\")\n",
-    "plt.plot(tst_list[1][\"rmia_mean\"],tst_list[1][\"accuracy_mean\"],label=\"rmia pareto\")\n",
-    "plt.legend()\n",
+    "# -------------------- #\n",
+    "#  Group Visualization #\n",
+    "# -------------------- #\n",
+    "plt.plot(tmp[\"rmia_mean\"],tmp[\"accuracy_mean\"],'.',label=\"RMIA Scatter\")\n",
+    "plt.plot(tmp[\"lira_mean\"],tmp[\"accuracy_mean\"],'.',label=\"LiRA Scatter\")\n",
+    "plt.plot(tst_list[0][\"lira_mean\"],tst_list[0][\"accuracy_mean\"],label=\"LiRA Pareto\")\n",
+    "plt.plot(tst_list[1][\"rmia_mean\"],tst_list[1][\"accuracy_mean\"],label=\"RMIA Pareto\")\n",
+    "plt.grid(True, alpha=0.3)\n",
+    "plt.legend(loc=\"lower right\")\n",
+    "plt.xlabel(\"Membership Inference Vulnerability (τ)\")\n",
+    "plt.ylabel(\"Accuracy\")\n",
+    "plt.title(f\"Pareto Frontiers of Accuracy vs. MIA Risk (FPR={grp_fpr})\")\n",
     "fig = plt.gcf()\n",
     "fig.show()\n",
     "\n",
-    "savePlot(fig, \"pareto_scatter_01\", study_name, \"study\")"
+    "savePlot(fig, f\"pareto_scatter_{grp_fpr}\", study_name, \"study\")"
    ]
   }
  ],
