updated config yamls and notebooks

--- a/optimize_target_model.ipynb
+++ b/optimize_target_model.ipynb
@@ -83,9 +83,10 @@
     "# ------------------------#\n",
     "#        Run study        #\n",
     "# ------------------------#\n",
-    "def parallell_optimization(config):\n",
+    "gpu_ids = [0, 1, 2, 3, 4, 5, 6]\n",
+    "\n",
+    "def parallell_optimization(config, gpu_ids):\n",
     "    study_cfg = config['study'] \n",
-    "    gpu_ids = study_cfg['gpu_ids']\n",
     "    print(f\"Starting parallell optimization using the following gpu ids: {gpu_ids}\")\n",
     "\n",
     "    metadata = sl.buildStudyMetadata(study_cfg, config['data']) \n",
@@ -125,7 +126,7 @@
     "\n",
     "if config is not None:\n",
     "    #run_optimization(config)\n",
-    "    parallell_optimization(config)"
+    "    parallell_optimization(config, gpu_ids)"
    ]
   }
  ],
