--- a/optimize_fbd_model.ipynb
+++ b/optimize_fbd_model.ipynb
@@ -91,8 +91,11 @@
     "config['fbd_study'][\"weight_decay\"] = train_metadata[\"weight_decay\"]\n",
     "config['fbd_study'][\"model\"] = train_metadata[\"model\"]\n",
     "config['fbd_study'][\"optimizer\"] = train_metadata[\"optimizer\"]\n",
-    "if train_metadata[\"model\"] in [\"wideresnet\", \"mlp3\", \"mlp4\"]: \n",
-    "    config['fbd_study'][\"drop_rate\"] = train_metadata[\"drop_rate\"] \n",
+    "config['fbd_study'][\"drop_rate\"] = train_metadata[\"drop_rate\"] \n",
+    "\n",
+    "# Build the study name\n",
+    "config[\"fbd_study\"][\"study_name\"] = f'{config[\"data\"][\"dataset\"]}-{train_metadata[\"model\"]}-fbd'\n",
+    "\n",
     "\n",
     "print_yaml(\"\\n------------ Updated study config: ------------\")\n",
     "print_yaml(config['fbd_study'])"
@@ -202,9 +205,10 @@
     "    tauc_ref=tauc_ref,\n",
     ")\n",
     "\n",
-    "study = None \n",
+    "gpu_ids = [0, 1, 2, 3, 4, 5, 6]\n",
+    "\n",
     "if config is not None: \n",
-    "    study = parallell_optimization(config, labels, fbd_args, study_hash=None)"
+    "    study = parallell_optimization(config, labels, fbd_args, gpu_ids, study_hash=None)"
    ]
   },
   {
