--- a/visualize_fbd_study.ipynb
+++ b/visualize_fbd_study.ipynb
@@ -346,7 +346,7 @@
     "ax.set_xlabel(\"FPR\")\n",
     "ax.set_ylabel(\"TPR\")\n",
     "ax.grid(True, alpha=0.3)\n",
-    "ax.set_title(\"LiRA ROC Curves: Baseline vs. FbD Models at Target Accuracy Thresholds\")\n",
+    "ax.set_title(\"LiRA ROC Curves: Baseline vs. FbD Models at Target Accuracy Thresholds\", fontsize=10)\n",
     "ax.legend(loc=\"lower right\")\n",
     "\n",
     "# ------- RMIA ROC ------- #\n",
@@ -364,7 +364,7 @@
     "ax.set_xlabel(\"FPR\")\n",
     "ax.set_ylabel(\"TPR\")\n",
     "ax.grid(True, alpha=0.3)\n",
-    "ax.set_title(\"RMIA ROC Curves: Baseline vs. FbD Models at Target Accuracy Thresholds\")\n",
+    "ax.set_title(\"RMIA ROC Curves: Baseline vs. FbD Models at Target Accuracy Thresholds\", fontsize=10)\n",
     "ax.legend(loc=\"lower right\")\n",
     "\n",
     "plt.tight_layout()\n",
