removed manual inputs to minimize user interaction

--- a/optimize_fbd_model.ipynb
+++ b/optimize_fbd_model.ipynb
@@ -39,7 +39,7 @@
     "config = None\n",
     "with open(\"./study_fbd.yaml\") as file:\n",
     "    config = yaml.safe_load(file)\n",
-    "print_yaml(f\"Initial study config: {config}\")"
+    "print_yaml(config)"
    ]
   },
   {
