--- a/train_baseline_target_model.ipynb
+++ b/train_baseline_target_model.ipynb
@@ -51,7 +51,7 @@
     "train_cfg = config[\"train\"]\n",
     "data_cfg = config[\"data\"]\n",
     "    \n",
-    "print(f\"Initial training config: {train_cfg}\")"
+    "print_yaml(config)"
    ]
   },
   {
@@ -64,7 +64,7 @@
     "# ------------------------------ #\n",
     "#  Load study + best trial info  #\n",
     "# ------------------------------ #\n",
-    "study_folder = \"cinic10-resnet-baseline-6d2602e58b\"\n",
+    "study_folder = train_cfg[\"study_name\"]\n",
     "study_path = os.path.join(\"study\", study_folder)\n",
     "\n",
     "journal_storage = False\n",
